--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Noter - About</title>
         <link rel="stylesheet" href="styles.css">
         <script src='functions.js'></script>
