--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Noter - Home</title>
         <script src="functions.js"></script>
         <link rel="stylesheet" href="styles.css" type='text/css'>
