--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Noter - About</title>
-        <link rel="stylesheet" href="styles.css">
-        <script src='functions.js'></script>
+        <link rel="stylesheet" href="assets/styles.css">
+        <script src='assets/functions.js'></script>
 
     </head>
     
@@ -30,7 +30,7 @@
                 <p>Noter is a message board to share your thoughts... add messages  
                 or images you want to highlight on your personal page.</p>
         
-                <p>Noter was built as an academic assignment using HTML, CSS, and JavaScript.</p>
+                <p>Noter was built for academic assignment using HTML, CSS, and JavaScript.</p>
         </div>
 
         <div class="about">
@@ -38,7 +38,7 @@
                 The Creator: Ben
             </h2>
 
-            <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.15752-9/60552289_336920270354664_598671617328939008_n.jpg?_nc_cat=111&_nc_ht=scontent-sea1-1.xx&oh=a6c5d42b65ff3569754f05dc08b9ac15&oe=5D522D57" alt="Photo of: Benjamin Wu" id='profile-pic'>
+            <img src="assets/images/ben_wu.jpg" alt="Photo of: Benjamin Wu" id='profile-pic'>
 
             <p>
                 I'm a second-degree student at UBC studying computer science with an interest in machine learning
